--- a/client/src/App.css
+++ b/client/src/App.css
@@ -94,3 +94,63 @@
   padding: 1rem;
   color: black;
 }
+
+.planeContainer {
+  width: 80vw;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: red;
+  margin-top: 1rem;
+  overflow-x: scroll;
+}
+
+.planeCard {
+  width: 70vw;
+  height: 15rem;
+  background-color: white;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.planeCardBottomSection {
+  flex-grow: 1;
+}
+
+.planeCardTopSection {
+  height: 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  color: black;
+}
+.planeCardTopSectionPlaneContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+ 
+}
+
+.planeCardTopSectionPlaneContainer > h2 {
+  font-size: 2rem;
+  margin-left: 10px;
+
+}
+
+.planeCardTopSectionIconContainer {
+  width: 9rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.planeCardBottomSection {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 60%;
+  padding: 1rem;
+  color: black;
+}
